feat(admin): configure role data scopes
